--- a/build.gradle
+++ b/build.gradle
@@ -32,18 +32,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.mlkit:barcode-scanning:16.0.3'
     testImplementation 'junit:junit:4.13'
     implementation 'com.android.volley:volley:1.1.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
-    def camerax_version = '1.0.0-alpha09'
+    def camerax_version = '1.0.0-beta12'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
-    implementation "androidx.camera:camera-view:1.0.0-alpha06"
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha06"
-    implementation "androidx.camera:camera-lifecycle:1.0.0-alpha03"
+    implementation "androidx.camera:camera-view:1.0.0-alpha19"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta12"
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.zxing:core:3.4.1'
 }
